Corrección completa del backend PattyModa